--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,8 +3,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
+  color: rgba(255,255,255,.87);
 }
 
 .App-logo {
