new-game flow working

--- a/src/styles/NewGame.css
+++ b/src/styles/NewGame.css
@@ -4,3 +4,15 @@
   justify-content: center;
   align-items: center;
 }
+
+.ng-action {
+  cursor: pointer;
+}
+
+.ng-action.strike {
+  color: red;
+}
+
+/* .ng-icon {
+  font-size: 1.25rem;
+} */
